[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://run.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=9]

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Run"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="CircleShape2D" id=10]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 110, 105 )

[node name="enemy" type="KinematicBody2D" groups=["Enemy"]]
script = ExtResource( 1 )
path_to_player = NodePath("../../../Player")

[node name="Collision" type="CollisionShape2D" parent="."]
scale = Vector2( 6.5, 6.5 )
shape = SubResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.90735e-06, -1.52588e-05 )
scale = Vector2( 3.5, 3.6371 )
texture = ExtResource( 2 )
offset = Vector2( 7.14286, -41.6541 )
vframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/Run = SubResource( 7 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="blood" type="Area2D" parent="."]
visible = false

[node name="blood" type="CollisionShape2D" parent="blood"]
scale = Vector2( 6, 6 )
shape = SubResource( 10 )

[node name="Give dmg" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Give dmg"]
position = Vector2( 0, -1 )
shape = SubResource( 6 )

[connection signal="body_entered" from="blood" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Give dmg" to="." method="_on_Give_dmg_body_entered"]
[connection signal="body_exited" from="Give dmg" to="." method="_on_Give_dmg_body_exited"]
